--- a/css/main.css
+++ b/css/main.css
@@ -657,21 +657,26 @@ img {
 }
 
 .hero__title {
-  width: 696px;
+  width: 100%;
   margin: 0 auto;
   margin-bottom: 30px;
   text-transform: uppercase;
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
+  font-size: 26px;
+  line-height: 1.62;
   letter-spacing: 0.06em;
   color: var(--white-txt-cl);
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .hero__title {
-    width: 100%;
-    font-size: 26px;
-    line-height: 1.62;
+    width: 360px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    width: 696px;
+    font-size: 44px;
+    line-height: 1.36;
   }
 }
 
@@ -1123,6 +1128,11 @@ img {
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 479px) {
+  .backdrop {
+    padding: 15px;
+  }
+}
 
 .backdrop.is-hidden {
   opacity: 0;
@@ -1149,10 +1159,17 @@ img {
   -webkit-transform: translate(-50%, -50%) scale(1);
           transform: translate(-50%, -50%) scale(1);
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .modal {
     width: 450px;
     height: 609px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .modal {
+    width: 100%;
+    height: 100%;
+    position: relative;
   }
 }
 
@@ -1201,9 +1218,15 @@ img {
   color: var(--primary-txt-cl);
   margin-bottom: 12px;
 }
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .register-form__title {
     width: 370px;
+    line-height: 1.5;
+  }
+}
+@media screen and (max-width: 479px) {
+  .register-form__title {
+    width: 100%;
     line-height: 1.5;
   }
 }
