--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -48,22 +48,25 @@
 }
 
 .hero__title {
-    width: 696px;
+    width: 100%;
     margin: 0 auto;
     margin-bottom: 30px;
 
     text-transform: uppercase;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     letter-spacing: 0.06em;
     color: var(--white-txt-cl);
 
-    @media screen and (max-width: 1199px) {
-        width: 100%;
-        font-size: 26px;
-        line-height: 1.62;
+    @media screen and (min-width: 480px) and (max-width: 1199px) {
+        width: 360px;
+    }
 
+    @media screen and (min-width: 1200px) {
+        width: 696px;
+        font-size: 44px;
+        line-height: 1.36;
     }
 }
 
