--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,6 +10,10 @@
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
         visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (max-width: 479px) {
+        padding: 15px;
+    }
 }
 
 .backdrop.is-hidden {
@@ -37,9 +41,15 @@
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
 
-    @media screen and (max-width: 1199px) {
+    @media screen and (min-width: 480px) and (max-width: 1199px) {
         width: 450px;
         height: 609px;
+    }
+
+    @media screen and (max-width: 479px) {
+        width: 100%;
+        height: 100%;
+        position: relative;
     }
 }
 
